--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,24 @@
+@mixin mobile {
+  @media screen and (max-width: 480px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin laptop {
+  @media screen and (max-width: 1200px) {
+    @content;
+  }
+}
+
+//variable for color
+// $darkColor: #2f2d52;
+
 .formContainer {
   background-color: #a7bca7;
   height: 100vh;
@@ -87,9 +108,14 @@
     display: flex;
     overflow: hidden;
 
+    @include tablet {
+      width: 90%;
+    }
+
     .sidebar {
       flex: 1;
       background-color: #3e3c61;
+      position: relative;
 
       .navbar {
         display: flex;
@@ -102,6 +128,10 @@
 
         .logo {
           font-weight: bold;
+
+          @include tablet {
+            display: none;
+          }
         }
 
         .user {
@@ -123,6 +153,11 @@
             font-style: 10px;
             border: none;
             cursor: pointer;
+
+            @include tablet {
+              position: absolute;
+              bottom: 10px;
+            }
           }
         }
       }
